you say i look high - i say im high bruh

--- a/src/app/spotbie/map/map.component.html
+++ b/src/app/spotbie/map/map.component.html
@@ -132,9 +132,9 @@
             src="assets/images/home_imgs/jpg/spotbie-miami-find-new-friends.jpg" 
             alt="Picture of group of friends in a circle playing cards at the beach." />
 
-      <img class='sb-greenIcon' src='assets/images/home_imgs/spotbie-green-icon.svg' />
+      <!--<img class='sb-greenIcon' src='assets/images/home_imgs/spotbie-green-icon.svg' />
             
-      <!--<h4 class="text-uppercase" (click)="toggleUsersAroundYouInfo()">
+      <h4 class="text-uppercase" (click)="toggleUsersAroundYouInfo()">
         USERS AROUND YOU
       </h4>  
 
@@ -155,8 +155,10 @@
 
     </div>
 
-    <div class="sb-footer mt-5">
-      <img class="mt-2 mb-2" src="assets/images/home_imgs/logo_spotbie-02.svg" />
+    <div class="sb-footer pt-5 pb-5">
+      <p [routerLink]="['/terms']">Terms & Privacy Policy</p>
+      <img class="mt-3 mb-3" src="assets/images/home_imgs/logo_spotbie-02.svg" />
+      <p [routerLink]="['/terms']">SpotBie, LLC.&copy; Copyright 2021</p>
     </div>
 
   </div>
