--- a/src/styles.css
+++ b/src/styles.css
@@ -278,6 +278,13 @@ a, a:hover, a:active, a:after{
     letter-spacing: 2px;
     line-height: 25px;
 }
+.sb-text-light-green-gradient{
+    background: -webkit-linear-gradient(90deg, #35a99f, #64e56f);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    letter-spacing: 2px;
+    line-height: 25px;
+}
 .spotbie-error{
     background: -webkit-linear-gradient(45deg,#e61d1d,#f70505,#7e0c0c);
     -webkit-background-clip: text;
@@ -799,11 +806,24 @@ hr{
     background-color: #101010;
 }
 
+.sb-v-wrapper{
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    min-height: 100%;
+    height: 100%;
+}
+
 .sb-greyStreetBg{
     background-image: url(src/assets/images/backgrounds-spotbie-02-desktop.jpg) !important;
     background-repeat: no-repeat !important;
     background-size: cover !important;
     background-position: center !important;
+}
+
+.sb-verificationCheck i{
+    font-size: 2rem;
+    color: #35a99f;
 }
 
 .mat-form-field.mat-focused.mat-warn .mat-select-arrow, .mat-form-field .mat-select.mat-select-invalid .mat-select-arrow {
@@ -819,6 +839,37 @@ hr{
 .mat-form-field-type-mat-native-select.mat-focused:not(.mat-form-field-invalid).mat-warn .mat-form-field-infix:after, .mat-form-field.mat-form-field-invalid .mat-form-field-label, .mat-form-field.mat-form-field-invalid .mat-form-field-label.mat-accent, .mat-form-field.mat-form-field-invalid .mat-form-field-label .mat-form-field-required-marker {
     color: #332f3e;
 }
+
+.spotbie-full-qrCode{
+    position: relative;
+    margin: 0 auto;
+    border-radius: 20px;
+    min-width: 450px;
+    width: 450px;
+    min-height: 450px;
+    height: 450px;
+    box-shadow: 0 20px 80px -20px #198754, 0 30px 20px -30px #64e56f, inset 0 -2px 6px #198754; 
+    overflow: hidden;   
+}
+.spotbie-full-qrCode.scanner{
+    border-radius: 20px;
+    min-width: unset;
+    width: unset;
+    min-height: unset;
+    height: unset;
+}
+.spotbie-full-qrCode img{
+    min-width: 100%;
+    width: 100%;
+    max-width: 100%;
+    border-radius: 20px;
+}
+
+p.sb-helpInfo{
+    margin: 0 auto;
+    max-width: 450px;
+}
+
 /**WIDTH MEDIA QUERIES */
 @media (max-width: 1300px) { 
 
