--- a/src/app/spotbie/map/map.component.css
+++ b/src/app/spotbie/map/map.component.css
@@ -656,6 +656,11 @@ span.sb-button{
     max-width: 120px;
     z-index: 1;
 }
+.sb-footer p{
+    color: #332f3e !important;
+    cursor: pointer;
+    font-size: 1rem !important;
+}
 .sb-logo-withStreet{
     position: relative;
     display: block;
