--- a/src/app/spotbie/spotbie-logged-in/business-menu/business-menu.component.css
+++ b/src/app/spotbie/spotbie-logged-in/business-menu/business-menu.component.css
@@ -1,12 +1,14 @@
+.spotbie-overlay-window{
+    z-index: 999;    
+}
 .sb-menuItemWrapper{
     position: relative;
     margin: 0 auto;
     min-width: 900px;
     width: 900px;
     max-width: 900px;
-    display: flex;
-    align-items: center;
-    justify-content: left;    
+    display: block;
+    text-align: left;  
 }
 .sb-addMenuItem{
     position: relative;
@@ -18,9 +20,55 @@
     max-height: 215px;
     background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='27' ry='27' stroke='white' stroke-width='5' stroke-dasharray='21%2c 12%2c 15' stroke-dashoffset='15' stroke-linecap='round'/%3e%3c/svg%3e");
     border-radius: 27px;
-    display: flex;
+    display: inline-block;
+    cursor: pointer;
+}
+.sb-addMenuItem h6{
+    position: absolute;
+    display: block;
+    width: 100%;
+    min-width: 100%;
+    text-align: center;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgb(0 0 0 / 69%);
+    color: white;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    text-transform: uppercase;
+}
+
+.sb-menuItem{
+    position: relative;
+    width: 215px;
+    min-width: 215px;
+    max-width:215px;
+    height: 215px;
+    min-height: 215px;
+    max-height: 215px;
+    margin-left: 10px;
+    background-size: cover !important;
+    background-repeat: no-repeat !important;
+    border-radius: 27px;
+    display: inline-block;
     align-content: center;
     align-items: center;
     cursor: pointer;
     justify-content: center;
+    margin-top: 10px;
+}
+
+.sb-menuItem h6{
+    position: absolute;
+    display: block;
+    width: 100%;
+    min-width: 100%;
+    text-align: center;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgb(0 0 0 / 69%);
+    color: white;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    text-transform: uppercase;
 }
