--- a/src/app/spotbie/spotbie-logged-in/business-menu/business-menu.component.html
+++ b/src/app/spotbie/spotbie-logged-in/business-menu/business-menu.component.html
@@ -1,17 +1,66 @@
-<h4 class="spotbie-text-gradient text-center text-uppercase pt-5 mb-5">YOUR SPOTBIE LOYALTY MENU</h4>
 
-<p class="spotbie-text-gradient mt-4">
-    These are the rewards that your business will offer to the spotbie community.
-</p>
 
-<div class='sb-menuItemWrapper mb-5'>
+<div *ngIf="userType !== '4'">
 
-    <div class='sb-addMenuItem' (click)="addItem()">
-        <h6 class="spotbie-text-gradient">+ ADD REWARD</h6>
+    <h4 class="spotbie-text-gradient text-center text-uppercase pt-5 mb-5">YOUR SPOTBIE LOYALTY MENU</h4>
+
+    <p class="spotbie-text-gradient text-center mt-4">
+        These are the rewards that your business will offer to the spotbie community.
+    </p>
+    
+    <div class='sb-menuItemWrapper mb-5'>
+    
+        <div class='sb-addMenuItem' 
+                (click)="addItem()" 
+                *ngIf="placeToEatRewards !== undefined && placeToEatRewards.length < 8">
+            <h6 class="spotbie-text-gradient">+ ADD REWARD</h6>
+        </div>
+    
+        <div class='sb-menuItem' 
+                *ngFor="let placeToEatReward of placeToEatRewards"
+                [ngStyle]="placeToEatTileStyling(placeToEatReward)"
+                (click)="openReward(placeToEatReward)">
+            <h6 *ngIf="placeToEatReward.type == '0'"> {{ placeToEatReward.name }} </h6>
+            <h6 *ngIf="placeToEatReward.type == '1'"> ${{ (placeToEatReward.point_cost * (userPointToDollarRatio / 100)) | number:'1.0':'en-US' }} </h6>
+        </div>
+    
+    </div>
+</div>
+
+<div *ngIf="userType === '4'">
+
+    <h4 class="spotbie-text-gradient text-center text-uppercase pt-5 mb-5">{{ placeToEat.name }} LOYALTY MENU</h4>
+
+    <p class="spotbie-text-gradient text-uppercase text-center mt-4">
+        pick what's yours
+    </p>
+    
+    <div class='sb-menuItemWrapper mb-5'>
+    
+        <div class='sb-menuItem' 
+                *ngFor="let placeToEatReward of placeToEatRewards"
+                [ngStyle]="placeToEatTileStyling(placeToEatReward)">
+            <h6 *ngIf="placeToEatReward.type == '0'"> {{ placeToEatReward.name }} </h6>
+            <h6 *ngIf="placeToEatReward.type == '1'"> ${{ (placeToEatReward.point_cost * (userPointToDollarRatio / 100)) | number:'1.0':'en-US' }} </h6>
+        </div>
+    
     </div>
 
+
+    
+</div>
+
+
+
+<div class="sb-closeButton" (click)="closeWindow()">
+    <i class="fa fa-times"></i>
 </div>
 
 <app-reward-creator *ngIf="itemCreator" 
-            [userLoyaltyPoints]="userLoyaltyPoints" 
-            [userPointToDollarRatio]="userPointToDollarRatio"></app-reward-creator>
+                    (closeRewardCreatorAndRefetchRewardListEvt)="closeRewardCreatorAndRefetchRewardList()"
+                    (closeWindowEvt)="closeWindow()"
+                    (closeThisEvt)="closeRewardCreator()"
+                    [reward]="reward"
+                    [userLoyaltyPoints]="userLoyaltyPoints"
+                    [userResetBalance]="userResetBalance" 
+                    [userPointToDollarRatio]="userPointToDollarRatio"></app-reward-creator>
