--- a/src/app/spotbie/spotbie-logged-in/business-menu/reward-creator/reward-creator.component.css
+++ b/src/app/spotbie/spotbie-logged-in/business-menu/reward-creator/reward-creator.component.css
@@ -3,7 +3,7 @@
     padding-bottom: 100px;
     background: #332f3e;
     text-align: center;    
-    z-index: 99;
+    z-index: 999;
 }
 .sb-rewardCreatorWrapper{
     position: relative;
@@ -55,4 +55,14 @@
     background-color: #000000e0;
     font-size: 20px;
     letter-spacing: 4px;
+}
+.sb-deleteMe{
+    margin: 0 auto;
+    cursor: pointer;
+    font-size: .8rem;
+    max-width: 250px;
+}
+.sb-deleteMe .fa-trash{
+    color: #a7a1a1;
+    display: block;
 }
