--- a/src/app/spotbie/spotbie-logged-in/business-menu/reward/reward.component.html
+++ b/src/app/spotbie/spotbie-logged-in/business-menu/reward/reward.component.html
@@ -1,1 +1,8 @@
-<p>menu-item works!</p>
+<app-loading-screen *ngIf="loading"></app-loading-screen>
+
+<div class="spotbie-overlay-window">
+
+    <h2>{{ reward.name }}</h2>
+
+
+</div>
