--- a/src/app/spotbie/spotbie-logged-in/qr/qr.component.html
+++ b/src/app/spotbie/spotbie-logged-in/qr/qr.component.html
@@ -1,1 +1,118 @@
-<p>qr works!</p>
+<!-- 
+    READ ME PLEASE
+    Author: Franco Petitfour
+    Note: Please don't delete any of the comments (& COMMENTED CODE) in this file. We will need it for another project, thanks.
+-->
+
+<div class='spotbie-overlay-window' *ngIf="isBusiness">
+    
+    <div class='sb-v-wrapper' style="display: grid; align-content: center;">
+
+        <h5 *ngIf="rewardPrompted" class="spotbie-text-gradient text-center text-uppercase pt-5 mb-3">GIFT THEM LOYALTY POINTS</h5>
+
+        <ngx-qrcode [elementType]="qrType" 
+                    [value]="placeToEat.qr_code_link"
+                    width="450"
+                    cssClass="spotbie-full-qrCode mt-4 mb-4"
+                    colorDark="#000"
+                    colorLight="#64e56f"
+                    errorCorrectionLevel="H"
+                    *ngIf="rewardPrompted"></ngx-qrcode>
+
+        <form [formGroup]="businessLoyaltyPointsForm" *ngIf="businessLoyaltyPointsFormUp">
+
+            <div *ngIf="businessLoyaltyPointsSubmitted && f.totalSpent.errors else total_spent_normal" class="spotbie-input-info spotbie-text-gradient spotbie-error">
+        
+                <div *ngIf="f.totalSpent.errors.required">
+                    You must enter a value!
+                </div>
+                
+            </div> 
+            
+            <ng-template #total_spent_normal>
+                <div class="spotbie-input-info spotbie-text-gradient text-uppercase mb-4">
+                    What was the total of this bill?
+                </div>          
+            </ng-template>
+
+            <input class="sb-input text-center" 
+                (click)="$event.target.select()" 
+                (keyup)="calculateLoyaltyPointValue()"
+                formControlName="totalSpent" 
+                type="text" 
+                prefix="$"
+                placeholder="$250" 
+                maxlength="7"
+                thousandSeparator="," 
+                mask="separator.0" />
+
+        </form>
+    
+        <p class="spotbie-text-gradient text-center mt-4 text-uppercase" *ngIf="rewardPrompted">
+            Total Points <span class='sb-text-light-green-gradient'>{{ loyaltyPointReward | number:'1.0':'en-US' }}</span>
+        </p>
+
+        <p class="spotbie-text-gradient text-center mt-3 text-uppercase" *ngIf="rewardPrompted">
+            Dollar Value <span class='sb-text-light-green-gradient'>${{ loyaltyPointRewardDollarValue | number:'1.0':'en-US' }}</span>
+        </p>
+
+        <p class="spotbie-text-gradient text-center mt-3 text-uppercase">Please only allow customers to scan this once per table or order.</p>
+
+        <button class='sb-button text-uppercase mt-4' (click)="closeQr()">close</button>
+
+        <div class="sb-closeButton" (click)="closeQr()">
+            <i class="fa fa-times"></i>
+        </div>
+
+    </div>
+
+</div>
+
+<div class='spotbie-overlay-window' *ngIf="rewardPrompt">
+
+    <div class='sb-v-wrapper' style="display: grid; align-content: center;">
+
+        <p class="spotbie-text-gradient text-center mt-5 text-uppercase">
+            Are you sure you want to reward this user for a <span class='sb-text-light-green-gradient'>${{ totalSpent }}</span> bill?
+        </p>
+
+        <p class="spotbie-text-gradient text-center mt-3 text-uppercase">
+            Dollar Value <span class='sb-text-light-green-gradient'>${{ loyaltyPointRewardDollarValue | number:'1.0':'en-US' }}</span>
+        </p>
+
+        <span class='sb-button text-uppercase mt-5' (click)="yes()">YES</span>
+
+        <span class='sb-button text-uppercase mt-4' (click)="no()">CANCEL</span>
+
+    </div>
+
+</div>
+
+<div class='spotbie-overlay-window' *ngIf="!isBusiness">    
+
+    <div class='sb-v-wrapper' style="display: grid; align-content: center;">
+
+        <h5 class="spotbie-text-gradient text-center text-uppercase pt-5 mb-5">SCAN AND EARN LOYALTY POINTS</h5>
+
+        <div class="spotbie-full-qrCode scanner mt-4 mb-4">
+            <zxing-scanner (scanSuccess)="scanSuccessHandler($event)"
+                           (scanError)="scanErrorHandler($event)"
+                           (scanFailure)="scanFailureHandler($event)"             
+                           [formats]="['QR_CODE', 'EAN_13', 'CODE_128', 'DATA_MATRIX']"></zxing-scanner>
+        </div>
+
+        <p class="sb-helpInfo spotbie-text-gradient text-center mt-5 text-uppercase">
+            Show your host the SpotBie app and they will let you scan and earn through their QR code.
+        </p>
+        
+        <h2 class="spotbie-text-gradient text-center text-uppercase pt-5 mb-5">{{ userLoyaltyPoints | number:'1.0':'en-US' }}</h2>
+
+        <button class='sb-button text-uppercase mt-4' (click)="closeQr()">close</button>
+
+        <div class="sb-closeButton" (click)="closeQr()">
+            <i class="fa fa-times"></i>
+        </div>
+
+    </div>
+
+</div>
