disabled--zxing qr code scanner due to missing dependencies

--- a/src/app/spotbie/spotbie-logged-in/qr/qr.component.html
+++ b/src/app/spotbie/spotbie-logged-in/qr/qr.component.html
@@ -108,10 +108,10 @@
 
         <div class="spotbie-full-qrCode scanner mt-4 mb-4">
 
-            <zxing-scanner (scanSuccess)="scanSuccessHandler($event)"
+            <!-- <zxing-scanner (scanSuccess)="scanSuccessHandler($event)"
                            (scanError)="scanErrorHandler($event)"
                            (scanFailure)="scanFailureHandler($event)"             
-                           [formats]="['QR_CODE', 'EAN_13', 'CODE_128', 'DATA_MATRIX']"></zxing-scanner>
+                           [formats]="['QR_CODE', 'EAN_13', 'CODE_128', 'DATA_MATRIX']"></zxing-scanner> -->
                            
         </div>
 
